# sphinx-relay-startos

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  check-interface.sh  config_spec.yaml  docker_entrypoint.sh  manifest.yaml
assets/compat/: config_spec.yaml  lnd_config_rules.yaml
docs/: instructions.md
scripts/: embassy.ts
scripts/procedures/: dependencies.ts  getConfig.ts  health.ts  healthChecks.ts  migrations.ts
scripts/services/: dependencies.ts  getConfig.ts  migrations.ts
sphinx-relay-configurator/: Cargo.toml
