[package]
name = "sphinx-relay-configurator"
version = "0.1.0"
authors = ["Keagan McClelland <keagan@start9labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
tokio = { version = "0.3.3", features = ["full"] }
